--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <!-- logo -->
           <div>
             <a class="navbar-brand" href="#">
-              <img src="/images/ac logo.png" height="40" class="" alt="Achievers Concept Logo"/>
+              <img src="./images/ac logo.png" height="40" class="" alt="Achievers Concept Logo"/>
             </a>
           </div>
           <!-- https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp -->
