--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.1/mdb.min.css" rel="stylesheet"/>
-    <link rel="shortcut icon" href="/images/icon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/icon.svg" type="image/x-icon">
     
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
@@ -83,7 +83,7 @@
       <!-- Animated navbar -->
     
       <!-- Background image -->
-      <div id="intro" class="bg-image" style="background-image: url(/images/bg.jpg);height: 100vh;">
+      <div id="intro" class="bg-image" style="background-image: url(./images/bg.jpg);height: 100vh;">
         <div class="mask text-white" style="background-color: rgba(0, 0, 0, 0.4)">
           <div class="container d-flex align-items-center text-center h-100 justify-content-center">
             <div>
@@ -135,7 +135,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img src="/images/chart.png" class="img-fluid" alt="">
+                <img src="./images/chart.png" class="img-fluid" alt="">
             </div>
 
             <div class="col-md-6">
@@ -172,7 +172,7 @@
           <div class="row row-cols-1 row-cols-md-3 g-4 mb-3 justify-content-center">
             <div class="col-lg-3">
               <div class="card h-100">
-                <img src="/images/CEO.jpg" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+                <img src="./images/CEO.jpg" class="card-img-top" alt="Hollywood Sign on The Hill"/>
                 <div class="card-body">
                   <h5 class="card-title">Mr Ayoola Oluwaseyi</h5>
                   <span class="small text-primary">CEO</span>
@@ -184,7 +184,7 @@
             </div>
             <div class="col-lg-3">
               <div class="card h-100">
-                <img src="/images/CEO.jpg" class="card-img-top" alt="Palm Springs Road"/>
+                <img src="./images/CEO.jpg" class="card-img-top" alt="Palm Springs Road"/>
                 <div class="card-body">
                   <h5 class="card-title">Mrs Ayoola Tokunbo</h5>
                   <span class="small text-primary">Co-CEO</span>
@@ -241,33 +241,33 @@
         <div class="container-fluid">
             <div class="row mt-4">
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img1.jpg"  target="_blank">
+                    <a href="./images/img1.jpg"  target="_blank">
                         <img src="/images/img1.jpg" width="100%" height="100%">
                     </a>
                 </div>
 
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img2.jpg"  target="_blank">
+                    <a href="./images/img2.jpg"  target="_blank">
                         <img src="/images/img2.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img3.jpg"  target="_blank">
+                    <a href="./images/img3.jpg"  target="_blank">
                         <img src="/images/img3.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img4.jpg"  target="_blank">
+                    <a href="./images/img4.jpg"  target="_blank">
                         <img src="/images/img4.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img5.jpg"  target="_blank">
+                    <a href="./images/img5.jpg"  target="_blank">
                         <img src="/images/img5.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
-                    <a href="/images/img6.jpg"  target="_blank">
+                    <a href="./images/img6.jpg"  target="_blank">
                         <img src="/images/img6.jpg" width="100%" height="100%">
                     </a>
                 </div>
