--- a/index.html
+++ b/index.html
@@ -242,33 +242,33 @@
             <div class="row mt-4">
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img1.jpg"  target="_blank">
-                        <img src="/images/img1.jpg" width="100%" height="100%">
+                        <img src="./images/img1.jpg" width="100%" height="100%">
                     </a>
                 </div>
 
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img2.jpg"  target="_blank">
-                        <img src="/images/img2.jpg" width="100%" height="100%">
+                        <img src="./images/img2.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img3.jpg"  target="_blank">
-                        <img src="/images/img3.jpg" width="100%" height="100%">
+                        <img src="./images/img3.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img4.jpg"  target="_blank">
-                        <img src="/images/img4.jpg" width="100%" height="100%">
+                        <img src="./images/img4.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img5.jpg"  target="_blank">
-                        <img src="/images/img5.jpg" width="100%" height="100%">
+                        <img src="./images/img5.jpg" width="100%" height="100%">
                     </a>
                 </div>
                 <div class="item col-sm-6 col-md-4 mb-3 gallery">
                     <a href="./images/img6.jpg"  target="_blank">
-                        <img src="/images/img6.jpg" width="100%" height="100%">
+                        <img src="./images/img6.jpg" width="100%" height="100%">
                     </a>
                 </div>
             </div>
